[project]
name = "sadpropy"
version = "0.1.0"
description = "A Structural analysis and design program in Python"
readme = "README.md"
requires-python = ">=3.12"

authors = [
{name = "jwiciardo"}
]

dependencies = [
"matplotlib==3.11.0",
"numpy==2.5.0",
"openpyxl==3.1.5",
"openseespy==3.7.1.2",
"opsvis==1.3.7",
"scipy==1.18.0",
]

keywords = ["structural analysis and design", "structural engineering"]

[project.urls]
Homepage = "https://github.com/jwiciardo/SadProPy"
Repository = "https://github.com/jwiciardo/SadProPy"

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"ruff>=0.6.0",
"mypy>=1.8"
]

[project.scripts]
sadpropy = "sadpropy.cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true